--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@
 title: "El Hadji Ablaye Galoup DIOP"
 description: "Bienvenue sur mon portfolio de Data Analyst et Data Engineering"
 theme: jekyll-theme-cayman
-logo: photo.jpg
+logo: img/photo.jpg
 show_downloads: true
 
