--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: "El Hadji Ablaye Galoup DIOP"
 description: "Bienvenue sur mon portfolio de Data Analyst et Data Engineering"
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 logo: img/photo.jpg
 show_downloads: true
 
